--- a/css/input-form.css
+++ b/css/input-form.css
@@ -45,6 +45,7 @@
 	width: 1px;
 	height: 1px;
 	opacity: 0;
+	z-index: -10;
 }
 
 .error {
